# pulmtln

./: .gitignore  .gitmodules  .readthedocs.yaml  CITATION.cff  CMakeLists.txt  CMakePresets.json  README.md  matrices.pulmtln.out.json  mkdocs.yml  vcpkg.json
.github/workflows/: builds-and-tests.yml  create-dist.bat  ubuntu-builds-and-tests.yml  windows-automated-releases.yml  windows-builds-and-tests.yml
docs/: Doc.md  index.md
gmshWrapper/: test_gmshWrapper.py
gmshWrapper/src/: mesher.py
src/: AttrToValueMap.h  BdrConditionValues.h  CMakeLists.txt  CoordGraph.cpp  CoordGraph.h  DirectedGraph.cpp  DirectedGraph.h  Domain.cpp  Domain.h  Driver.cpp  Driver.h  ElectrostaticSolver.cpp  ElectrostaticSolver.h  FES.cpp  FES.h  Materials.cpp  Materials.h  Model.cpp  Model.h  Parameters.cpp  Parameters.h  Parser.cpp  Parser.h  Results.cpp  Results.h  SolverOptions.h  constants.h  multipolarExpansion.h  pulmtln.cpp
src/adapter/: OpensembaAdapter.cpp  OpensembaAdapter.h
src/components/: Model.h
src/solver/: BoundaryConditions.h  CMakeLists.txt  Driver.cpp  Driver.h  ElectrostaticSolver.cpp  ElectrostaticSolver.h  FES.cpp  FES.h  Material.cpp  Material.h  Model.cpp  Model.h  Solver.cpp  Solver.h  SolverInput.h  SolverOptions.h  constants.h  electromagnetics.h  fes_definitions.cpp  fes_definitions.h
test/: CMakeLists.txt  CoordGraphTest.cpp  DirectedGraphTest.cpp  DomainTest.cpp  DriverTest.cpp  ElectrostaticSolverTest.cpp  ModelTest.cpp  ParametersTest.cpp  ParserTest.cpp  ResultsTest.cpp  TestUtils.h  mfemTest.cpp  multipolarExpansionTest.cpp  pulmtlnTest.cpp
test/adapter/: OpensembaAdapterTest.cpp
testData/agrawal1981/: agrawal1981.FCStd  agrawal1981.msh  agrawal1981.pulmtln.in.json
testData/empty_coax/: empty_coax.pulmtln.in.json
testData/empty_coax_neumann/: empty_coax_neumann.FCStd  empty_coax_neumann.areas.json  empty_coax_neumann.msh  empty_coax_neumann.pulmtln.in.json  empty_coax_neumann.step
testData/five_wires/: five_wires.FCStd  five_wires.msh  five_wires.pulmtln.in.json  partially_filled_coax.pulmtln.in.json
testData/five_wires/ansys_maxwell_data/: FiveWireSetup_FiveWires_FineGrid.txt
testData/five_wires/sacamos_data/: five_wires.bundle  five_wires.bundle_spec  overshield.cable  overshield.cable_spec  wire_0_5mm.cable  wire_0_5mm.cable_spec  wire_0_8mm.cable  wire_0_8mm.cable_spec
testData/gmshMeshes/: mesh_from_step.py
testData/gmshMeshes/empty_coax/: empty_coax.py
testData/gmshMeshes/two_wires_coax/: two_wires_coax.FCStd  two_wires_coax_analytical_formulas.py
testData/lansink2024/: lansink2024.FCStd  lansink2024.msh  lansink2024.pulmtln.in.json  lansink2024.step
testData/lansink2024_fdtd_cell/: lansink2024_fdtd_cell.FCStd  lansink2024_fdtd_cell.areas.json  lansink2024_fdtd_cell.in.json  lansink2024_fdtd_cell.msh  lansink2024_fdtd_cell.pulmtln.in.json  lansink2024_fdtd_cell.step
testData/lansink2024_inner/: lansink2024_inner.FCStd  lansink2024_inner.msh  lansink2024_inner.pulmtln.in.json  lansink2024_inner.step
testData/lansink2024_single_wire/: lansink2024_single_wire.FCStd  lansink2024_single_wire.msh  lansink2024_single_wire.pulmtln.in.json  lansink2024_single_wire.step
testData/lansink2024_single_wire_multipolar/: lansink2024_single_wire_multipolar.msh  lansink2024_single_wire_multipolar.pulmtln.in.json
testData/lansink2024_small_one_centered/: lansink2024_small_one_centered.FCStd  lansink2024_small_one_centered.msh  lansink2024_small_one_centered.pulmtln.in.json  lansink2024_small_one_centered.step
testData/lansink2025_small_one_centered/: lansink2024_small_one_centered.areas.json
testData/nested_coax/: nested_coax.FCStd  nested_coax.msh  nested_coax.pulmtln.in.json
testData/partially_filled_coax/: matrices.pulmtln.out.json  partially_filled_coax.msh  partially_filled_coax.pulmtln.in.json
testData/smbInputs/empty_coax/: empty_coax.FCStd  empty_coax.msh  empty_coax.py  empty_coax.step
testData/three_wires_ribbon/: three_wires_ribbon.FCStd  three_wires_ribbon.msh  three_wires_ribbon.pulmtln.in.json  three_wires_ribbon.step  three_wires_ribbon_analytical_formulas.py
testData/two_wires_coax/: two_wires_coax.pulmtln.in.json
testData/two_wires_open/: two_wires_open.msh  two_wires_open.pulmtln.in.json  two_wires_open.step
testData/two_wires_shielded/: two_wires_shielded.FCStd  two_wires_shielded.msh  two_wires_shielded.pulmtln.in.json  two_wires_shielded.step
testData/two_wires_unshielded/: two_wires_unshielded.FCStd
